--- a/package.json
+++ b/package.json
@@ -10,6 +10,6 @@
   "scripts": {
     "wdio": "wdio run ./wdio.conf.js",
     "hamburger": "npx wdio run ./wdio.conf.js --spec test.hamburger.js",
-    "cart": "npx wdio run ./wdio.conf.js --spec 'test.cart.js' './test/specs/cartbugs/**/*.js'"
+    "cart": "npx wdio run ./wdio.conf.js --spec \"test.cart.js\" \"./test/specs/cartbugs/**/*.js\""
   }
 }
